[package]
name = "mw_platform_windows"
version = "0.1.0"
edition = "2021"

[features]
dev = []
release = []
proprietary = []

[dependencies.mw_common]
path = "../../common/mw_common"
features = [ "bevy" ]

[dependencies.mw_engine]
path = "../mw_engine"

[dependencies.mw_app_core]
path = "../mw_app_core"

[dependencies]

[dependencies.bevy]
version = "0.14.0"
default-features = false

[dependencies.iyes_bevy_extras]
git = "https://github.com/IyesGames/iyes_bevy_extras"
branch = "minewars"
