[package]
name = "mw_ui_mobile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = []
release = []
proprietary = []

[dependencies.mw_common]
path = "../../common/mw_common"
features = [ "bevy" ]

[dependencies.mw_engine]
path = "../mw_engine"

[dependencies.mw_app_core]
path = "../mw_app_core"

[dependencies]

[dependencies.serde]
version = "1.0.204"
features = [ "derive" ]

[dependencies.bevy]
version = "0.14.0"
default-features = false
features = [
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
]

[dependencies.bevy_asset_loader]
version = "0.21"
features = [
    "2d",
    "progress_tracking",
    "standard_dynamic_assets",
]

[dependencies.iyes_bevy_extras]
git = "https://github.com/IyesGames/iyes_bevy_extras"
branch = "minewars"
