[package]
name = "mw_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = [ "dep:bevy" ]
net = [ "dep:rustls", "dep:tokio", "dep:tokio-util", "dep:quinn"]

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.1", features = ["derive"] }
derive_more = "0.99.18"
enum-iterator = "2.1.0"
enum-map = "2.7.3"
glam = "0.27.0"
modular-bitfield = "0.11.2"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.62"
tracing = "0.1.40"
rand_pcg = "0.3.1"
noise = "0.9.0"
interpolation = "0.3.0"
morton-encoding = "2.0.1"
bitcode = { version = "0.6.3", features = ["derive", "glam", "serde"] }

[dependencies.hashbrown]
version = "0.14.5"
features = ["serde"]

[dependencies.rand]
version = "0.8.5"
default-features = false
features = [
    "std",
    "libc",
]

[dependencies.serde]
version = "1.0.204"
features = [ "derive" ]

[dependencies.bevy]
version = "0.14.0"
default-features = false
optional = true
features = [
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
]

[dependencies.tokio]
version = "1.38.0"
optional = true
features = [
    "full",
]

[dependencies.tokio-util]
version = "0.7.11"
optional = true
features = [
    "full",
]

[dependencies.rustls]
version = "0.23" # must be whatever quinn uses
optional = true
default-features = false
features = []

[dependencies.quinn]
version = "0.11.2"
optional = true
default-features = false
features = ["runtime-tokio", "rustls", "ring", "log"]
