[package]
name = "mw_proto_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mw_common = { path = "../mw_common", features = ["net"] }
mw_dataformat = { path = "../mw_dataformat" }
thiserror = "1.0.62"
rmp-serde = "1.3.0"
bitcode = { version = "0.6.3", features = ["derive", "glam", "serde"] }

[dependencies.serde]
version = "1.0.204"
features = [ "derive" ]

[dependencies.quinn]
version = "0.11.2"
optional = true
default-features = false
features = ["runtime-tokio", "rustls", "ring", "log"]
