[package]
name = "mw_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proprietary = []

[dependencies]
mw_dataformat = { path = "../../common/mw_dataformat" }
mw_proto_auth = { path = "../../common/mw_proto_auth" }
mw_proto_hostauth = { path = "../../common/mw_proto_hostauth" }
toml = "0.8.14"
anyhow = "1.0.86"
ron = "0.8.1"

[dependencies.mw_common]
path = "../../common/mw_common"
features = [ "net" ]

[dependencies.serde]
version = "1.0.203"
features = [ "derive" ]

[dependencies.clap]
version = "4.5.8"
features = [ "derive" ]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.tracing]
version = "0.1.40"
features = ["async-await"]
